addded phoneStor project

--- a/index.html
+++ b/index.html
@@ -68,6 +68,18 @@
             <h1>Projects</h1>
         </div>
         <div class="work-container">
+            <a href="https://webdevedd.github.io/phoneStore/">
+                <div class="web-cards">
+                    <div class="web-cards-img">
+                        <img src="images/phoneStoreThumbnail.png" alt="">
+                    </div>
+                    <div class="web-cards-title">
+                        <h2>
+                            Phone Store eCommerce
+                        </h2>
+                    </div>
+                </div>  
+                </a>
             <a href="https://webdevedd.github.io/spidermanWebsite/">
             <div class="web-cards">
                 <div class="web-cards-img">
@@ -91,11 +103,6 @@
                     </h2>
                 </div>
             </div> 
-            </a>
-            <a href="">
-            <div class="web-cards">
-                
-            </div>  
             </a>  
         </div>
     </div>
